# kairon_exercise

./: .gitignore  .pre-commit-config.yaml  config.toml  exchange_data.sqlite  exchange_data_10.sqlite  flake.nix  pyproject.toml
.devenv/: profile
kairon_exercise/: main.py  main.py.bak
kairon_exercise/database/: db_functions.py
kairon_exercise/exchange_interface/: #common_functions.py#  binance.py  common_functions.py  kucoin.py
tests/: test_market_functions.py
