[tool.poetry]
name = "kairon_exercise"
version = "0.1.0"
description = ""
authors = ["Sil Vaes <sil.g.vaes@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.9.0"
rich = "^13.7.0"
websockets = "^12.0"
aiostream = "^0.5.2"
ipython = "^8.18.1"

[tool.poetry.scripts]
ex = "kairon_exercise.main:start"

[tool.poetry.group.dev.dependencies]
# sexpdata = "1.0.0"
python-lsp-server = "^1.9.0"
python-lsp-ruff = "^2.0.0"
pylsp-mypy = "^0.6.8"
pytest = "^7.4.3"
# ruff = "0.1.5"
# importmagic = "^0.1.7"
# epc = "^0.0.5"
# black = "^23.11.0"
# mypy = "1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
