[tool.poetry]
name = "kairon_exercise"
version = "0.1.0"
description = ""
authors = ["Sil Vaes <sil.g.vaes@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.9.0"
rich = "^13.7.0"
websockets = "^12.0"
aiostream = "^0.5.2"
ipython = "^8.18.1"
aiohttp = "^3.9.1"
sqlmodel = "^0.0.14"
numpy = "^1.26.2"
pandas = "^2.1.4"
matplotlib = "^3.8.2"
seaborn = "^0.13.0"


[tool.poetry.scripts]
ex = "kairon_exercise.main:start"

[tool.poetry.group.dev.dependencies]
python-lsp-server = "^1.9.0"
python-lsp-ruff = "^2.0.0"
pylsp-mypy = "^0.6.8"
pytest = "^7.4.3"
importmagic = "^0.1.7"
epc = "^0.0.5"
black = "^23.12.0"
mypy = "^1.7.1"
sexpdata = "1.0.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
